--- a/Loamlight.yaml
+++ b/Loamlight.yaml
@@ -4,13 +4,13 @@
 log-view:
   nickname-format: '%n'
 input-text:
-  font-family: 'Monaco'
-  font-size: 11.0
+  font-family: 'Lucida Grande'
+  font-size: 12.0
   background-color: '#181818'
   color: '#ffffff'
 member-list:
-  font-family: 'Monaco'
-  font-size: 9.0
+  font-family: 'Lucida Grande'
+  font-size: 10.0
   color: '#bbb'
   background-color: '#000000'
   operator:
@@ -24,8 +24,8 @@ member-list:
       top-color: '#222'
       bottom-color: '#222'
 server-tree:
-  font-family: 'Monaco'
-  font-size: 9.0
+  font-family: 'Lucida Grande'
+  font-size: 10.0
   background-color: '#000000'
   highlight:
     color: '#E9C062'
